removed accidentaily added files and tweaked makefile

--- a/src/makefile
+++ b/src/makefile
@@ -4,17 +4,20 @@ CFLAGS=-lncurses
 .PHONY: all clean
 all: ao
 
-ao: ao_io.o ao_planet.o ao.o 
-	$(CC) $(CFLAGS) -o ao ao_io.o ao.o ao_planet.o
+ao: ao_io.o ao_planet.o ao_ship.o ao.o
+	$(CC) -o ao ao_io.o ao_ship.o ao_planet.o ao.o $(CFLAGS)
 
 ao.o:
-	$(CC) $(CFLAGS) -c ao.cpp
+	$(CC) -c ao.cpp $(CFLAGS)
 
 ao_io.o:
-	$(CC) $(CFLAGS) -c ao_io.cpp
+	$(CC) -c ao_io.cpp $(CFLAGS)
+
+ao_ship.o:
+	$(CC) -c ao_ship.cpp $(CFLAGS)
 
 ao_planet.o:
-	$(CC) $(CFLAGS) -c ao_planet.cpp
+	$(CC) -c ao_planet.cpp $(CFLAGS)
 
 clean:
-	rm *.o *.h.gch 
+	rm -f *.o *.h.gch
